tests/data/bad/bad_init_2.py
from ..good.good import cfg

cfg = cfg.inherit()
